# vote-counter

./: Cargo.toml  LICENSE-MIT  README.md  makefile  sample.csv
src/: ballot.rs  ballot_box.rs  candidates.rs  main.rs  reporting.rs
vote-counter/: Cargo.toml
vote-counter/src/: main.rs
